# ga-mla

./: .gitignore  CMakeLists.txt  README.md  aggregate_eqnamer_csv.py  cities_geojson_to_xml.py  eqname_parallel.sh  preprocess_polygons.sh  pyproject.toml  truncate_geojson_decimals.py
plugins/: CMakeLists.txt
plugins/events/: CMakeLists.txt
plugins/events/eqnamer/: CMakeLists.txt  README.md  eqnamer.cpp  eqnamer_batch.cpp  rapidcsv.h
plugins/events/eqnamer/descriptions/: global_eqnamer.xml
plugins/events/magselect/: CMakeLists.txt  README.md  selector.cpp
plugins/events/magselect/descriptions/: global_magselect.xml
plugins/magnitudes/: CMakeLists.txt
plugins/magnitudes/mla/: CMakeLists.txt  mla.cpp  mla.h  variants.cpp  variants.h
plugins/magnitudes/mla/descriptions/: global_mla.xml
plugins/magnitudes/mwpa/: CMakeLists.txt  mwpa.cpp  mwpa.h
plugins/magnitudes/mwpa/descriptions/: global_mwpa.xml
