SET(PLUGIN_TARGET eqnamer)
SET(PLUGIN_SOURCES eqnamer.cpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/base/main/apps/processing/scevent)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/base/main/apps/processing/scevent)

SC_ADD_PLUGIN_LIBRARY(PLUGIN ${PLUGIN_TARGET} scevent)
SC_LINK_LIBRARIES_INTERNAL(${PLUGIN_TARGET} evplugin)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

SET(EQNAMER_BATCH_TARGET eqnamer_batch)
SET(EQNAMER_BATCH_SOURCES eqnamer_batch.cpp)
SC_ADD_EXECUTABLE(EQNAMER_BATCH ${EQNAMER_BATCH_TARGET})
SC_LINK_LIBRARIES_INTERNAL(${EQNAMER_BATCH_TARGET} client evplugin)
